<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="20dp"
    tools:context=".activities.AddOrEditGameActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/addGameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/addGameYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/release_year" />

        <EditText
            android:id="@+id/addGameImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_url" />

        <EditText
            android:id="@+id/addGameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:maxLines="8"
            android:minLines="1" />

        <Button
            android:id="@+id/addGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>