<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:padding="0dp"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/editButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:backgroundTint="#FFC5C5"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_edit" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFC5C5"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_delete" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/gameReleaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/relase_date_2012"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:maxLines="4"
        android:text="@string/lorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolor"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>