<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="30dp"
    tools:context=".activities.GameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:padding="0dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/gameImage"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/placeholder"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/gameReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/relase_date_2012"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gameDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/lorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolorlorem_ipsum_dolor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>