<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#ECECEC"
    tools:context=".activities.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="20dp"
        tools:listitem="@layout/game_item" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/seedFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/seed"
        android:padding="0dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#FFC107"
        android:contentDescription="@string/add_game"
        tools:ignore="RtlCompat" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addFloatingButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/add_game"/>
</FrameLayout>